--- a/sass/_Defaults.scss
+++ b/sass/_Defaults.scss
@@ -5,4 +5,5 @@
 
 body {
   font-family: Arial, Sans-serif;
+  overflow: hidden;
 }
